--- a/opening-case-brightcove-support.html
+++ b/opening-case-brightcove-support.html
@@ -1,111 +1,84 @@
-<h1>{{ page.title }}</h1>
-<article class="bcls-article">
-  <summary>{{ page.description }}</summary>
-  <section class="bcls-section">
-    <p>Brightcove offers a variety of support programs to meet the needs of our customers. For information on these programs, check the <a href="https://www.brightcove.com/en/services/customer-support">Brightcove Support section</a> of our website.</p>
-    <p>One support option is the Support Portal that can be used to open a case with Brightcove Support</p>
-  </section>
-  <section class="bcls-section">
-    <h2 id="create-account">Creating a new support account</h2>
-    <p>Before you can create cases using the Support Portal you have to create an account. To create a new account, follow these steps:</p>
+<h1>{{page.title}}</h1> <article class="bcls-article"> <summary>{{page.description}}</summary> <section class="bcls-section">
+    <p>Brightcove propose divers programmes de support pour répondre aux besoins de ses clients. Pour plus d'informations sur ces programmes, consultez la section Support<a href="https://www.brightcove.com/en/services/customer-support"> Brightcove</a> de notre site Web.</p>
+    <p>L'une des options de support est le portail de support qui peut être utilisé pour ouvrir un dossier auprès du support Brightcove.</p>  </section><section class="bcls-section">
+    <h2 id="create-account">Création d'un nouveau compte d'assistance</h2>
+    <p>Avant de pouvoir créer des requêtes à l'aide du portail d'assistance, vous devez créer un compte. Pour créer un nouveau compte, procédez comme suit:</p>
     <ol class="bcls-tasklist-restart" style="--s:1">
-      <li>Access the Support Portal using one of these methods:
+      <li>Accédez au portail de support en utilisant l'une des méthodes suivantes:
         <ul>
-          <li>In the application header, click <strong>SUPPORT &gt; Contact Support</strong></li>
-          <li>Go to <a href="https://supportportal.brightcove.com/">https://supportportal.brightcove.com</a></li>
-        </ul>
-        <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-portal-login.png" /></figure>
+          <li>Dans l'en-tête de l'application, cliquez sur<strong> SUPPORT &gt; Contacter le support</strong></li>
+          <li>Allez sur<a href="https://supportportal.brightcove.com/"> https://supportportal.brightcove.com</a></li>
+        </ul> <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-portal-login.png" /></figure>
       </li>
-      <li>Click <strong>Sign Up</strong>.</li>
-      <li>Enter your <strong>First Name</strong>, <strong>Last Name</strong>,<strong> Email</strong> and <strong>Password</strong>. Click <strong>Submit</strong>.
-        <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-portal-create-account.png" /></figure>
+      <li>Cliquez sur<strong> S'inscrire</strong>.</li>
+      <li>Saisissez votre<strong> prénom, votre nom de</strong> famille<strong>, votre</strong> adresse e-mail<strong> et votre</strong> mot de passe<strong>.</strong> Cliquez sur<strong> Soumettre</strong>. <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-portal-create-account.png" /></figure>
       </li>
-      <li>Confirm that you are redirected to the Brightcove Support Portal home page.
-        <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-portal-home.png" /></figure>
+      <li>Vérifiez que vous êtes redirigé vers la page d'accueil du portail de support Brightcove. <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-portal-home.png" /></figure>
       </li>
-    </ol>
-  </section>
-  <section class="bcls-section">
-    <h2 id="open-case">Opening a support case</h2>
-    <p>To open a case with Brightcove Support using the Support Portal, follow these steps:</p>
+    </ol>  </section><section class="bcls-section">
+    <h2 id="open-case">Ouvrir un dossier de support</h2>
+    <p>Pour ouvrir un dossier auprès du support Brightcove via le portail de support, procédez comme suit:</p>
     <ol class="bcls-tasklist-restart" style="--s:1">
-      <li>Log in to the Brightcove Support Portal at <a href="https://supportportal.brightcove.com">https://supportportal.brightcove.com</a>.</li>
-      <li>Click <strong>SUBMIT A CASE</strong> in the page header.</li>
-      <li>Enter case information:
+      <li>Connectez-vous au portail de support Brightcove à l'<a href="https://supportportal.brightcove.com">adresse https://supportportal.brightcove.com</a>.</li>
+      <li>Cliquez sur<strong> SOUMETTRE UN DOSSIER</strong> dans l'en-tête de la page.</li>
+      <li>Saisissez les informations sur le dossier:
         <ul>
-          <li><strong>Subject</strong> - Title of the case</li>
-          <li><strong>Description</strong> - Description of the issue, question or problem</li>
-          <li><strong>Priority</strong>
+          <li><strong>Objet</strong> - Titre de l'affaire</li>
+          <li><strong>Description</strong>: description du problème, de la question ou du problème</li>
+          <li><strong>Priorité</strong>
             <ul>
-              <li><strong>P1</strong> - Critical - Loss of a Brightcove Service or critical loss of significant publishing availability to a live production player</li>
-              <li><strong>P2</strong> - Important - Brightcove Service is operational, but there are blocking issues regarding expected publishing capabilities specific to a live production player (i.e. relating to uploads, console activity, specific players).</li>
-              <li><strong>P3</strong> - Normal - Requests which are not defined as Critical or Important (including requests for account/user modifications)</li>
+              <li><strong>P1</strong> - Critique - Perte d'un service Brightcove ou perte critique de disponibilité de publication significative pour un acteur de production en direct</li>
+              <li><strong>P2</strong> - Important - Le service Brightcove est opérationnel, mais il existe des problèmes de blocage concernant les fonctionnalités de publication attendues spécifiques à un lecteur de production en direct (c'est-à-dire liées aux téléchargements, à l'activité de la console, à des lecteurs spécifiques).</li>
+              <li><strong>P3</strong> - Normal - Demandes qui ne sont pas définies comme critiques ou importantes (y compris les demandes de modification de compte/utilisateur)</li>
             </ul>
           </li>
-          <li><strong>Product</strong> - The Brightcove application to which the support request relates to</li>
-          <li><strong>Brightcove Account</strong> - Account name where the support request relates to</li>
-          <li><strong>URL</strong> - Page URL where the issue can be observed (if available)</li>
-          <li><strong>Additional CC</strong> - On top of the default CC list, you can decide to add additional email addresses of collaborators that should be informed of the case progress</li>
-        </ul>
-        <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-portal-create-case.png" /></figure>
+          <li><strong>Produit</strong>: l'application Brightcove à laquelle la demande d'assistance se rapporte</li>
+          <li><strong>Brightcove Account</strong>: nom du compte auquel la demande d'assistance se rapporte</li>
+          <li><strong>URL</strong>: URL de la page où le problème peut être observé (si disponible)</li>
+          <li><strong>CC supplémentaire</strong>: en haut de la liste CC par défaut, vous pouvez décider d'ajouter des adresses e-mail supplémentaires de collaborateurs qui doivent être informés de l'évolution du dossier</li>
+        </ul> <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-portal-create-case.png" /></figure>
       </li>
-      <li>Click <strong>Submit</strong>. The case details will be displayed.
-        <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-portal-case-details.png" /></figure>
+      <li>Cliquez sur<strong> Soumettre</strong>. Les détails du dossier seront affichés. <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-portal-case-details.png" /></figure>
       </li>
-      <li>Click on the <strong>Write a new comment...</strong> link to add additional comments or to upload a screen shot. Detailed steps to reproduce the issue and screen shots of the behavior/issue are always helpful to Brightcove Support and can speed up the time needed to resolve your case.</li>
-    </ol>
-  </section>
-  <section class="bcls-section">
-    <h2 id="view-cases">Viewing your support cases</h2>
-		<aside class="bcls-aside bcls-aside--information">Note: if your Support Portal profile is <strong>admin</strong>, you will see all cases for the account (you will not get notifications when other account users create cases). If you are a <strong>standard</strong> or self-registered user, you will only see the cases you have opened.</aside
-    <p>All support cases can easily be viewed in the Support Portal. The <strong>CASE STATUS</strong> will be one of:</p>
+      <li>Cliquez sur le bouton<strong> Écrire un nouveau commentaire... </strong>pour ajouter des commentaires supplémentaires ou pour télécharger une capture d'écran. Des étapes détaillées pour reproduire le problème et des captures d'écran du comportement/problème sont toujours utiles au support de Brightcove et peuvent accélérer le temps nécessaire à la résolution de votre dossier.</li>
+    </ol>  </section><section class="bcls-section">
+    <h2 id="view-cases">Consultation de vos dossiers d'assistance</h2> <aside class="bcls-aside bcls-aside--information">Remarque: si votre profil sur le portail d'assistance est<strong> administrateur</strong>, vous verrez tous les cas pour le compte (vous ne recevrez pas de notifications lorsque d'autres utilisateurs du compte créeront des requêtes). Si vous êtes un utilisateur<strong> standard</strong> ou auto-enregistré, vous ne verrez que les dossiers que vous avez ouverts. </aside     <p>Toutes les demandes d'assistance peuvent être facilement consultées sur le portail d'assistance. Le<strong> CASE STATUS</strong> sera l'un des suivants:</p>
     <ul>
-      <li><strong>New</strong> - Case was just created and is awaiting Brightcove review</li>
-      <li><strong>Open</strong> - Case is in progress</li>
-      <li><strong>Awaiting your response</strong> - Brightcove Support requires additional information or a solution has been provided and Brightcove is waiting for a response</li>
-      <li><strong>Closed</strong> - Case has been resolved</li>
-      <li><strong>Closed Awaiting</strong> - Case was closed due to no response from publisher; case will be reopened if publisher contacts Brightcove</li>
-    </ul>
-    		<aside class="bcls-aside bcls-aside--information">Note that cases that have been deleted by Support as duplicates will not appear in the Support Portal.</aside>
-    <p>To view your cases with Brightcove Support, follow these steps:</p>
+      <li><strong>Nouveau</strong> - Le dossier vient d'être créé et est en attente d'examen par Brightcove</li>
+      <li><strong>Ouvert</strong> - Le dossier est en cours</li>
+      <li><strong>En attente de votre réponse</strong>: le support de Brightcove nécessite des informations supplémentaires ou une solution a été fournie et Brightcove attend une réponse</li>
+      <li><strong>Clos</strong> - Le dossier a été résolu</li>
+      <li><strong>Fermé en attente</strong> - Le dossier a été fermé en raison de l'absence de réponse de l'éditeur&nbsp;; le dossier sera rouvert si l'éditeur contacte Brightcove</li>
+    </ul> <aside class="bcls-aside bcls-aside--information">Notez que les requêtes supprimées par le support en tant que doublons n'apparaîtront pas sur le portail de support.</aside>
+    <p>Pour consulter vos cas avec le support Brightcove, procédez comme suit:</p>
 
     <ol class="bcls-tasklist-restart" style="--s:1">
-      <li>Log in to the Brightcove Support Portal at <a href="https://supportportal.brightcove.com">https://supportportal.brightcove.com</a>.</li>
-      <li>Click <strong>SUPPORT CASES</strong> in the page header. A list of <strong>Open Cases</strong> will display.
-        <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-portal-case-listing.png" /></figure>
+      <li>Connectez-vous au portail de support Brightcove à l'<a href="https://supportportal.brightcove.com">adresse https://supportportal.brightcove.com</a>.</li>
+      <li>Cliquez sur CAS DE<strong> SUPPORT</strong> dans l'en-tête de la page. Une liste des dossiers<strong> ouverts</strong> s'affiche. <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-portal-case-listing.png" /></figure>
       </li>
-      <li>Click the <strong>Case History</strong> link to view a list of closed cases.</li>
-      <li>Click on a <strong>Case Number</strong> to view the case details including comments from Brightcove Support.</li>
+      <li>Cliquez sur le<strong> lien Historique des</strong> dossiers pour afficher la liste des dossiers clôturés.</li>
+      <li>Cliquez sur un numéro de<strong> dossier</strong> pour afficher les détails du dossier, y compris les commentaires du support Brightcove.</li>
     </ol>
-    <p>Clicking on a column header will sort the list by that column.</p>
-  </section>
-  <section class="bcls-section">
-    <h2 id="updating">Updating a support case</h2>
-    <p>Once the case has been created three are a few actions you can take to keep your cases up to date: </p>
+    <p>Cliquez sur l'en-tête d'une colonne pour trier la liste en fonction de cette colonne.</p>  </section><section class="bcls-section">
+    <h2 id="updating">Mettre à jour un dossier de support</h2>
+    <p>Une fois le dossier créé, vous pouvez prendre trois mesures pour tenir vos dossiers à jour: </p>
     <ul>
-      <li>Add new comments to communicate with our support team</li>
-      <li>Upload or delete attachments with more information to help us identify the issue as fast as possible</li>
-      <li>Update the case priority in the event that you need more attention on a case or it becomes more urgent than initially expected</li>
-      <li>Update the CC list to add more watchers to the case</li>
-      <li>Request  case closure after your issue has been resolved</li>
-    </ul>
-  </section>
-  <section class="bcls-section">
-    <h2 id="update-cc-list">Updating your default CC list</h2>
-    <p>The default CC list is a per account email list that is notified of all of the account’s case activity. To update the list, follow these steps:</p>
+      <li>Ajoutez de nouveaux commentaires pour communiquer avec notre équipe d'assistance</li>
+      <li>Téléchargez ou supprimez des pièces jointes contenant plus d'informations pour nous aider à identifier le problème le plus rapidement possible</li>
+      <li>Mettez à jour la priorité de dossier si vous avez besoin de plus d'attention sur un dossier ou s'il devient plus urgent que prévu</li>
+      <li>Mettre à jour la liste des CC pour ajouter d'autres observateurs au cas</li>
+      <li>Demander la clôture du dossier une fois votre problème résolu</li>
+    </ul>  </section><section class="bcls-section">
+    <h2 id="update-cc-list">Mettre à jour votre liste CC par défaut</h2>
+    <p>La liste CC par défaut est une liste de diffusion par compte qui est notifiée de toutes les activités de dossier du compte.™ Pour mettre à jour la liste, procédez comme suit:</p>
     <ol class="bcls-tasklist-restart" style="--s:1">
-      <li>Go to the top right corner and click on the user icon.
-        <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-account.png" /></figure>
+      <li>Allez dans le coin supérieur droit et cliquez sur l'icône de l'utilisateur. <figure class="bcls-figure"><img alt="" src="/assets/images/s-support-img/support-account.png" /></figure>
       </li>
-      <li>Click <strong>My Account</strong>.</li>
-      <li>Enter the new email addresses or remove existing addresses in the <strong>Account default CC list</strong>.</li>
-      <li>Click <strong>Update default CC list</strong> to save the changes.</li>
-    </ol>
-  </section>
-  <section class="bcls-section">
-    <h2 id="view-system-status">Viewing the Brightcove System Status page</h2>
-    <p>Brightcove continuously monitors the status of all Brightcove Services. If there are any interruptions in service, a note will be posted on the System Status Page. All scheduled maintenance notices will also be posted.</p>
-    <p>To access the System Status page, login to the Support Portal and click SYSTEM STATUS in the page header or go to <a href="https://status.brightcove.com/">status.brightcove.com</a>.</p>
-    <p>To learn more about the System Status page, see <a href="/support/viewing-brightcove-system-status-page.html">Viewing the Brightcove System Status Page</a>.</p>
-  </section>
-</article>
+      <li>Cliquez sur<strong> Mon compte</strong>.</li>
+      <li>Saisissez les nouvelles adresses e-mail ou supprimez les adresses existantes dans la liste CC par défaut du<strong> compte</strong>.</li>
+      <li>Cliquez sur<strong> Mettre à jour la liste CC par défaut</strong> pour enregistrer les modifications.</li>
+    </ol>  </section><section class="bcls-section">
+    <h2 id="view-system-status">Affichage de la page État du système Brightcove</h2>
+    <p>Brightcove surveille en permanence l'état de tous les services Brightcove. En cas d'interruption de service, une note sera publiée sur la page État du système. Tous les avis de maintenance planifiée seront également publiés.</p>
+    <p>Pour accéder à la page État du système, connectez-vous au portail de support et cliquez sur ÉTAT DU SYSTÈME dans l'en-tête de la page ou rendez-vous sur<a href="https://status.brightcove.com/"> status.brightcove.com</a>.</p>
+    <p>Pour en savoir plus sur la page État du système, consultez<a href="/support/viewing-brightcove-system-status-page.html"> Affichage de la page d'état du système Brightcove</a>.</p>   </section></article>
