--- a/reset-portal-password.html
+++ b/reset-portal-password.html
@@ -1,46 +1,26 @@
-<h1>{{ page.title }}</h1>
-<article class="bcls-article">
-  <summary>{{ page.description }}</summary>
-  <section class="bcls-section">
-    <h2 id="introduction">Introduction</h2>
-    <p>If you forget your password for the Brightcove Support Portal, or you just want to change it, it is very easy to do. The steps below will walk you through the process.</p>
-    <aside class="bcls-aside bcls-aside--information">Note that Support Portal credentials are <strong>not</strong> associated with Studio credentials.</aside>
-  </section>
-  <section class="bcls-section">
-    <h2 id="steps">Steps</h2>
+<h1>{{page.title}}</h1> <article class="bcls-article"> <summary>{{page.description}}</summary> <section class="bcls-section">
+    <h2 id="introduction">Présentation</h2>
+    <p>Si vous oubliez votre mot de passe pour accéder au portail de support Brightcove, ou si vous souhaitez simplement le modifier, c'est très simple. Les étapes ci-dessous vous guideront tout au long du processus.</p> <aside class="bcls-aside bcls-aside--information">Notez que les informations d'identification de Support Portal<strong> ne sont pas</strong> associées aux informations d'identification Studio.</aside> </section> <section class="bcls-section">
+    <h2 id="steps">Étapes</h2>
     <ol class="bcls-tasklist-restart">
-      <li>Go to the <a href="https://supportportal.brightcove.com">Support Portal</a>.</li>
+      <li>Accédez au portail<a href="https://supportportal.brightcove.com"> d'assistance</a>.</li>
       <li>
-        Click the "Forgot your password?" link:
-        <figure class="bcls-figure">
-          <img class="bcls-image" src="/assets/images/s-support-img/forgot-password.png" alt="Forgot Password Link">
-          <figcaption class="bcls-caption--image">Forgot Password Link</figcaption>
-        </figure>
+        Cliquez sur le lien Mot de passe oublié&nbsp;? lien: <figure class="bcls-figure">
+          <img class="bcls-image" src="/assets/images/s-support-img/forgot-password.png" alt="Lien Mot de passe oublié"> <figcaption class="bcls-caption--image">Lien Mot de passe oublié</figcaption> </figure>
       </li>
       <li>
-        In the <strong>Forgot Your Password</strong> dialog, enter your username and click <strong>Continue</strong>:
-        <figure class="bcls-figure">
-          <img class="bcls-image" src="/assets/images/s-support-img/forgot-password-dialog.png" alt="Forgot Your Password Dialog">
-          <figcaption class="bcls-caption--image">Forgot Your Password Dialog</figcaption>
-        </figure>
+        Dans la boîte de<strong> dialogue Mot de passe</strong> oublié, entrez votre nom d'utilisateur et cliquez sur<strong> Continuer</strong>: <figure class="bcls-figure">
+          <img class="bcls-image" src="/assets/images/s-support-img/forgot-password-dialog.png" alt="Boîte de dialogue Mot de passe oublié"> <figcaption class="bcls-caption--image">Boîte de dialogue Mot de passe oublié</figcaption> </figure>
       </li>
       <li>
-        Within a few minutes, you should receive an email with a link to the password reset page:
-        <figure class="bcls-figure">
-          <img class="bcls-image" src="/assets/images/s-support-img/password-reset-email.png" alt="Password Reset Email">
-          <figcaption class="bcls-caption--image">Password Reset Email</figcaption>
-        </figure>
+        Dans quelques minutes, vous devriez recevoir un e-mail contenant un lien vers la page de réinitialisation du mot de passe: <figure class="bcls-figure">
+          <img class="bcls-image" src="/assets/images/s-support-img/password-reset-email.png" alt="E-mail de réinitialisation du mot"> <figcaption class="bcls-caption--image">E-mail de réinitialisation du mot</figcaption> </figure>
       </li>
       <li>
-        Click the link, and in the page that opens, enter and confirm your new password, and then click <strong>Change Password</strong>:
-        <figure class="bcls-figure">
-          <img class="bcls-image" src="/assets/images/s-support-img/change-password.png" alt="Change Password">
-          <figcaption class="bcls-caption--image">Change Password</figcaption>
-        </figure>
+        Cliquez sur le lien, puis dans la page qui s'ouvre, saisissez et confirmez votre nouveau mot de passe, puis cliquez sur<strong> Modifier le mot de passe</strong>: <figure class="bcls-figure">
+          <img class="bcls-image" src="/assets/images/s-support-img/change-password.png" alt="Changer le mot de"> <figcaption class="bcls-caption--image">Changer le mot de</figcaption> </figure>
       </li>
       <li>
-        Your password will be updated immediately, and you will be forwarded to the Support Portal.
+        Votre mot de passe sera immédiatement mis à jour et vous serez redirigé vers le portail d'assistance.
       </li>
-    </ol>
-  </section>
-</article>
+    </ol>  </section></article>
