--- a/contact-sales.html
+++ b/contact-sales.html
@@ -1,13 +1,5 @@
-<h1>{{ page.title }}</h1>
-<article class="bcls-article">
- <summary>{{ page.description }}</summary>
- <section class="bcls-section">
-   <h2 id="contact_sales">New to Brightcove?</h2>
-   <p>If you are new to Brightcove and interested in purchasing Brightcove products or services, you can contact our Sales organization by going to <a href="https://www.brightcove.com/en/contact-sales">this page</a> and filling out the form, or by calling one of the phone numbers listed at the bottom of that page.</p>
- </section>
- <section class="bcls-section">
-   <h2 id="account_manager">Already a customer?</h2>
-   <p>If you are already a Brightcove customer and interested in purchasing add-ons, additional products or services, contact you Account Manager. If you are not sure who your Account Manager is, <a href="/support/opening-case-with-brightcove-support.html">open a support case</a>, and someone in our Support organization will give you the information.</p>
- </section>
-</article>
-
+<h1>{{page.title}}</h1> <article class="bcls-article"> <summary>{{page.description}}</summary> <section class="bcls-section">
+   <h2 id="contact_sales">Vous êtes nouveau sur Brightcove&nbsp;?</h2>
+   <p>Si vous découvrez Brightcove et que vous souhaitez acheter des produits ou services Brightcove, vous pouvez contacter notre service commercial en vous rendant sur<a href="https://www.brightcove.com/en/contact-sales"> cette page</a> et en remplissant le formulaire, ou en appelant l'un des numéros de téléphone indiqués au bas de cette page.</p>  </section><section class="bcls-section">
+   <h2 id="account_manager">Vous êtes déjà client&nbsp;?</h2>
+   <p>Si vous êtes déjà client de Brightcove et que vous souhaitez acheter des modules complémentaires, des produits ou des services supplémentaires, contactez votre responsable de compte. Si vous n'êtes pas sûr de savoir qui est votre responsable de compte,<a href="/support/opening-case-with-brightcove-support.html"> ouvrez une demande</a> d'assistance et un membre de notre organisation d'assistance vous fournira les informations.</p>   </section></article>
