--- a/viewing-brightcove-system-statue-page.html
+++ b/viewing-brightcove-system-statue-page.html
@@ -1,75 +1,55 @@
-<h1>{{ page.title }}</h1>
-<article class="bcls-article">
-  <summary>{{ page.description }}</summary>
-  <section class="bcls-section">
-    <div class="training-video-player-ipx" data-experience="5a73630f7afd7a00101bc1b5" data-video-ids="6052551601001">&nbsp;</div>
-    <script src="https://players.brightcove.net/20318290001/experience_5a73630f7afd7a00101bc1b5/live.js"></script>
-    <p>Brightcove continuously monitors the status of all Brightcove Services and applications. If there are any interruptions in service, a note will be posted on the System Status Page. All scheduled maintenance notices will also be posted on this page.</p>
-    <p>To access the System Status Page, visit <a href="https://status.brightcove.com">https://status.brightcove.com</a>.</p>
-    <figure class="bcls-figure"><img class="bcls-image--no-border" alt="" src="/assets/images/s-support-img/system-status.png" /></figure>
-    <p>All posted notifications will include the following information:</p>
+<h1>{{page.title}}</h1> <article class="bcls-article"> <summary>{{page.description}}</summary> <section class="bcls-section">
+    <div class="training-video-player-ipx" data-experience="5a73630f7afd7a00101bc1b5" data-video-ids="6052551601001">&nbsp;</div> <script src="https://players.brightcove.net/20318290001/experience_5a73630f7afd7a00101bc1b5/live.js"></script>
+    <p>Brightcove surveille en permanence l'état de tous les services et applications Brightcove. En cas d'interruption de service, une note sera publiée sur la page État du système. Tous les avis de maintenance planifiée seront également publiés sur cette page.</p>
+    <p>Pour accéder à la page d'état du système, rendez-vous sur<a href="https://status.brightcove.com"> https://status.brightcove.com</a>.</p> <figure class="bcls-figure"><img class="bcls-image--no-border" alt="" src="/assets/images/s-support-img/system-status.png" /></figure>
+    <p>Toutes les notifications publiées incluront les informations suivantes:</p>
     <ul>
-      <li>Incident Status
+      <li>État de l'incident
         <ul>
-          <li>Operational (Green)</li>
-          <li>Notification (Blue - systems are currently in operation but affected by delays or intermittent outages)</li>
-          <li>Partial Service Disruption (Yellow)</li>
-          <li>Full Service Disruption (Red)</li>
-          <aside class="bcls-aside bcls-aside--information">Note: Brightcove does not send notifications to the subscribers when the System Status is changed to Blue. Notifications are sent when the status is in Yellow or Red.</aside>
+          <li>Opérationnel (vert)</li>
+          <li>Notification (bleu - les systèmes sont actuellement en service mais affectés par des retards ou des pannes intermittentes)</li>
+          <li>Interruption partielle du service (jaune)</li>
+          <li>Interruption complète du service (rouge)</li> <aside class="bcls-aside bcls-aside--information">Remarque: Brightcove n'envoie pas de notifications aux abonnés lorsque l'état du système passe à Bleu. Les notifications sont envoyées lorsque l'état est en jaune ou en rouge.</aside>
         </ul>
       </li>
-      <li>Components - Service or area affected</li>
-      <li>Locations
+      <li>Composants - Service ou zone concernée</li>
+      <li>Emplacements
         <ul>
           <li>APAC</li>
-          <li>Americas</li>
+          <li>Amériques</li>
           <li>EMEA</li>
-          <li>Japan</li>
+          <li>Japon</li>
         </ul>
       </li>
-      <li>Current State and status. States include:
+      <li>État et statut actuels. Les États incluent:
         <ul>
-          <li>Investigating - Engineers are looking into the issue</li>
-          <li>Identified - Engineers have identified the issue and are looking to correct</li>
-          <li>Monitoring - Issue resolved and Engineering monitoring to ensure all is healthy</li>
-          <li>Resolved - Issue resolved</li>
+          <li>Enquêter - Les ingénieurs se penchent sur le problème</li>
+          <li>Identifié - Les ingénieurs ont identifié le problème et cherchent à le corriger</li>
+          <li>Surveillance - Problème résolu et surveillance technique pour s'assurer que tout est en bon état</li>
+          <li>Résolu - Problème résolu</li>
         </ul>
       </li>
     </ul>
-    <p>All posted messages will be in English and the time used is Eastern Standard Time (GMT-5).</p>
-  </section>
-  <section class="bcls-section">
-    <h2 id="history">Viewing the system status history</h2>
-    <p>To view the System Status history, click the <strong>History</strong> link at the bottom of the page.</p>
-    <figure class="bcls-figure"><img class="bcls-image--no-border" alt="" src="/assets/images/s-support-img/system-status-history.png" /></figure>
-  </section>
-  <section class="bcls-section">
-    <h2 id="subscribe">Subscribing to system status changes</h2>
-    <p>You can sign up to be notified when the system status changes. This section is organized as follows:</p>
+    <p>Tous les messages postés seront en anglais et l'heure utilisée est l'heure normale de l'Est (GMT-5).</p>  </section><section class="bcls-section">
+    <h2 id="history">Afficher l'historique de l'état du système</h2>
+    <p>Pour afficher l'historique de l'état du système, cliquez sur le<strong> lien</strong> Historique en bas de la page.</p>   <figure class="bcls-figure"><img class="bcls-image--no-border" alt="" src="/assets/images/s-support-img/system-status-history.png" /></figure></section><section class="bcls-section">
+    <h2 id="subscribe">S'abonner aux changements d'état du système</h2>
+    <p>Vous pouvez vous inscrire pour être averti lorsque l'état du système change. Cette section est organisée comme suit:</p>
     <ul>
-      <li><a href="#email">Subscribing to email</a></li>
-      <li><a href="#webhook">Subscribing to webhook</a></li>
-      <li><a href="#manage">Managing your subscription</a></li>
+      <li><a href="#email">S'abonner aux e-mails</a></li>
+      <li><a href="#webhook">S'abonner au webhook</a></li>
+      <li><a href="#manage">Gérer votre abonnement</a></li>
     </ul>
-    <h3 id="email">Subscribing to email</h3>
-    <p>To receive notifications by email, click the <strong>SUBSCRIBE</strong> button, enter your email address and then click <strong>Subscribe</strong>.</p>
-    <figure class="bcls-figure"><img class="bcls-image--no-border" alt="" src="/assets/images/s-support-img/system-status-subscribe.png" /></figure>
-    <p>After clicking <strong>Subscript</strong>, you will get the below message prompting them to check your email:</p>
-    <figure class="bcls-figure"> <img class="bcls-image--no-border" src="/assets/images/s-support-img/thanks-for-subscibing.png" alt="Check Your Email">
-      <figcaption class="bcls-caption--image">Check Your Email</figcaption>
-    </figure>
-    <p>The email comes from <strong>no-reply@brightcove.com</strong> and has “Status Subscription” for subject. If you don’t see it, please check your spam folder and/or review with your IT team in case it is being filtered.</p>
-    <h3 id="webhook">Subscribing to webhook</h3>
-    <p>A webhook is a defined callback made with HTTP POST. You specify a URL where the callback will post a JSON object when there is a status update.</p>
-    <p>To sign up to be notified when the system status changes, select the <strong>SUBSCRIBE</strong> button. Then enter a URL to receive the JSON payload along with your email address.</p>
-    <figure class="bcls-figure"><img class="bcls-image--no-border" alt="webhook subscribe" src="/assets/images/s-support-img/system-status-webhook-subscribe.png" /></figure>
-    <p>When system status changes are sent, your webhook address should receive a JSON object similar to this:</p>
-    <figure class="bcls-figure"><img class="bcls-image--no-border" alt="webhook json" src="/assets/images/s-support-img/system-status-webhook-json.png" /></figure>
-    <h3 id="manage">Managing your subscription</h3>
-    <p>After you have subscribed, you will receive an email with a link to a Manage Subscription page that allows you to manage your subscription. You can choose the components/products/regions you are interested in receiving notifications for. Make your selections and then click <strong>Save Subscription</strong>.</p>
-    <figure class="bcls-figure"><img class="bcls-image--no-border" alt="" src="/assets/images/s-support-img/system-status-manage-sub.png" /></figure>
-    <p>To unsubscribe, click the <strong>Unsubscribe</strong> link at the bottom of the Manage Subscription page.</p>
-    <h3>Getting notifications in Slack</h3>
-    <p>Slack has its own webhook system that can be used to connect status updates. Consult the <a href="https://api.slack.com/messaging/webhooks">Slack documentation for details.</a></p>
-  </section>
-</article>
+    <h3 id="email">S'abonner aux e-mails</h3>
+    <p>Pour recevoir des notifications par e-mail, cliquez sur le<strong> bouton</strong> S'ABONNER, entrez votre adresse e-mail, puis cliquez sur<strong> S'abonner</strong>.</p> <figure class="bcls-figure"><img class="bcls-image--no-border" alt="" src="/assets/images/s-support-img/system-status-subscribe.png" /></figure>
+    <p>Après avoir cliqué<strong> sur S'abonner</strong>, vous recevrez le message ci-dessous les invitant à vérifier votre adresse e-mail:</p> <figure class="bcls-figure"> <img class="bcls-image--no-border" src="/assets/images/s-support-img/thanks-for-subscibing.png" alt="Vérifiez votre adresse e-mail"> <figcaption class="bcls-caption--image">Vérifiez votre adresse e-mail</figcaption> </figure>
+    <p>L'e-mail provient de<strong> no-reply@brightcove.com</strong> et a pour objet Statut Abonnement-fr/. Si vous ne le voyez pas, veuillez vérifier votre dossier de spam et/ou vérifier avec votre équipe informatique au cas où il serait filtré.™</p>
+    <h3 id="webhook">S'abonner au webhook</h3>
+    <p>Un webhook est un rappel défini effectué avec HTTP POST. Vous spécifiez une URL dans laquelle le rappel publiera un objet JSON lors d'une mise à jour de statut.</p>
+    <p>Pour vous inscrire afin d'être averti lorsque l'état du système change, cliquez sur le<strong> bouton</strong> S'ABONNER. Saisissez ensuite une URL pour recevoir la charge utile JSON ainsi que votre adresse e-mail.</p> <figure class="bcls-figure"><img class="bcls-image--no-border" alt="abonnement webhook" src="/assets/images/s-support-img/system-status-webhook-subscribe.png" /></figure>
+    <p>Lorsque des modifications d'état du système sont envoyées, votre adresse webhook doit recevoir un objet JSON similaire à celui-ci:</p> <figure class="bcls-figure"><img class="bcls-image--no-border" alt="webhook json" src="/assets/images/s-support-img/system-status-webhook-json.png" /></figure>
+    <h3 id="manage">Gérer votre abonnement</h3>
+    <p>Après votre inscription, vous recevrez un e-mail contenant un lien vers une page Gérer l'abonnement qui vous permettra de gérer votre abonnement. Vous pouvez choisir les composants/produits/régions pour lesquels vous souhaitez recevoir des notifications. Faites votre choix, puis cliquez sur<strong> Enregistrer l'abonnement</strong>.</p> <figure class="bcls-figure"><img class="bcls-image--no-border" alt="" src="/assets/images/s-support-img/system-status-manage-sub.png" /></figure>
+    <p>Pour vous désabonner, cliquez sur le<strong> lien</strong> Se désabonner en bas de la page Gérer l'abonnement.</p>
+    <h3>Recevoir des notifications dans Slack</h3>
+    <p>Slack possède son propre système de webhook qui peut être utilisé pour connecter les mises à jour de statut. Consultez la documentation<a href="https://api.slack.com/messaging/webhooks"> Slack pour plus de détails.</a></p>   </section></article>
